# mcp-markdown-tools

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README-zh.md  README.md
.github/workflows/: release.yml
src/: config.rs  error.rs  image_localizer.rs  lib.rs  main.rs  mst.rs  numbering.rs  parser.rs  renderer.rs  tools.rs  utils.rs
test/: doc1-cn.md
tests/: README.md  end_to_end_tests.rs  image_localization_tests.rs
tests/common/: helpers.rs  mock_http_server.rs  mock_server.rs  mod.rs
tests/e2e/: mod.rs  workflow_tests.rs
tests/fixtures/: complex.md  sample.md  with_images.md
tests/integration/: end_to_end_tests.rs  image_localization_integration_tests.rs  image_localization_tests.rs  mod.rs  numbering_integration_tests.rs
tests/unit/: config_tests.rs  error_tests.rs  image_localizer_tests.rs  mod.rs  numbering_tests.rs  parser_tests.rs  tools_tests.rs  utils_tests.rs  validation_tests.rs
