[package]
name = "mcp-markdown-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6", features = ["server", "macros", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
regex = "1.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.0"
sha2 = "0.10"
