[package]
name = "mcp-markdown-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6", features = ["server", "macros", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
regex = "1.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"   # 临时文件测试
criterion = "0.5"  # 性能基准测试
mockall = "0.12"   # 模拟对象
proptest = "1.4"   # 属性测试
wiremock = "0.5"   # HTTP模拟服务器
tokio-test = "0.4" # Tokio 测试工具
rstest = "0.26"

[features]
default = ["mock"]
mock = []

# 测试目标配置
[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e_tests"
path = "tests/e2e/mod.rs"
